# ask-human

./: README.md  mcp-server-config.json  pyproject.toml
src/ask_human/: __init__.py  __main__.py  broker_state.py  dialogs.py  prompt_formatting.py  server.py  telegram_broker.py  telegram_broker_client.py  telegram_client.py  telegram_models.py
src/ask_human_for_context_mcp/: broker_state.py  dialogs.py  prompt_formatting.py  server.py  telegram_broker_client.py  telegram_client.py  telegram_models.py
src/ask_human_now/: __init__.py  broker_state.py  dialogs.py
tests/: __init__.py  test_dev_setup.py  test_dialog_timeout.py  test_dialog_timing_info.py  test_dialog_title.py  test_entry_points.py  test_icon_paths.py  test_macos_dialog.py  test_mcp_server.py  test_package.py  test_readme_features.py  test_telegram_broker.py  test_telegram_broker_client.py  test_telegram_response_channel.py  test_windows_dpi.py
