[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask-human"
version = "0.3.4"
description = "MCP server that lets AI agents ask the user for input via Telegram or a GUI dialog and wait for the answer."
authors = [{name = "Alex Che", email = "alex.chexes@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["mcp", "human-in-the-loop", "telegram", "ai-assistant", "agents", "ai-agents", "agentic-ai", "codex", "claude", "claude-code", "cursor", "gui", "dialog"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Topic :: Desktop Environment :: File Managers"
]

dependencies = [
    "markdown-it-py>=4.0.0",
    "mcp>=1.23.0",
    "python-multipart>=0.0.27",
    "starlette>=1.0.1",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.3.5",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.405",
    "twine>=5.0",
]

[project.urls]
Homepage = "https://github.com/alexchexes/ask-human"
Repository = "https://github.com/alexchexes/ask-human"
Issues = "https://github.com/alexchexes/ask-human/issues"

[project.scripts]
ask-human = "ask_human:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ask_human"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8.3.5",
    "black>=22.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "pyright>=1.1.405",
    "twine>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
